--- a/src/index.css
+++ b/src/index.css
@@ -67,4 +67,7 @@ cursor: pointer;
     justify-content: space-between;
 }
 
-.task.reminder{}
+.task.reminder{
+  border-left: 5px solid green;
+
+}
